# promptshield

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
apps/promptshield-enterprise-api/: README.md  alembic.ini  pyproject.toml
apps/promptshield-enterprise-api/alembic/: env.py
apps/promptshield-enterprise-api/promptshield_enterprise/: __init__.py  main.py  settings.py
apps/promptshield-enterprise-api/promptshield_enterprise/api/: __init__.py  router.py
apps/promptshield-enterprise-api/promptshield_enterprise/api/middleware/: auth.py  logging.py
apps/promptshield-enterprise-api/promptshield_enterprise/api/v1/: __init__.py  admin.py  analytics.py  health.py  policies.py  precheck.py  proxy.py
apps/promptshield-enterprise-api/promptshield_enterprise/providers/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  registry.py
apps/promptshield-enterprise-api/promptshield_enterprise/services/: __init__.py  analytics_service.py  message_service.py  policy_engine.py  prompt_classifier.py  quota_service.py  routing_service.py  token_estimator.py  user_profile_service.py
apps/promptshield-enterprise-api/promptshield_enterprise/storage/: __init__.py  database.py  models.py  repository.py
apps/promptshield-enterprise-api/promptshield_enterprise/telemetry/: __init__.py  logging.py  metrics.py
apps/promptshield-enterprise-api/tests/: test_precheck_api.py
apps/promptshield-enterprise-ui/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/promptshield-enterprise-ui/src/: App.tsx  index.css  main.tsx
apps/promptshield-enterprise-ui/src/api/: analytics.ts  client.ts
apps/promptshield-enterprise-ui/src/components/: DecisionBadge.tsx  Layout.tsx  StatCard.tsx
apps/promptshield-enterprise-ui/src/pages/: Dashboard.tsx  Policies.tsx  Requests.tsx  Settings.tsx  Users.tsx
apps/promptshield-lite/: README.md  pyproject.toml
apps/promptshield-lite/promptshield_lite/: __init__.py  main.py
apps/promptshield-lite/promptshield_lite/cli/: __init__.py  analyze.py  config_cmd.py  history.py  precheck.py
apps/promptshield-lite/promptshield_lite/engine/: __init__.py  local_store.py
apps/promptshield-lite/promptshield_lite/output/: __init__.py  formatter.py
deploy/compose/: .env.example  docker-compose.yml  prometheus.yml
deploy/docker/: enterprise-api.Dockerfile  enterprise-ui.Dockerfile  lite.Dockerfile  nginx-ui.conf
docs/: architecture.md  repo-structure.md  requirement.md
docs/design/: adr-001-hook-architecture.md  scoring-system.md
docs/integration/: claude-code-hook.md  enterprise-analytics.md
