[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptshield-workspace"
version = "0.1.0"
description = "PromptShield - Prompt Governance and Query Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/promptshield-core",
    "packages/promptshield-config",
    "packages/promptshield-sdk",
    "apps/promptshield-lite",
    "apps/promptshield-enterprise-api",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["promptshield_core", "promptshield_config", "promptshield_sdk", "promptshield_lite", "promptshield_enterprise"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps/promptshield-enterprise-api/tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
